--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,7 +39,17 @@ html {
   color: #fff;
 }
 
+button {
+  border: 0;
+  background-color: rgba(0,0,0,0);
+  float: right;
+  font-size: 1.7rem;
+}
 
 .far {
-  float: right;
+  
+}
+
+.blog:hover {
+  
 }
