--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="/css/styles.css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/df5ca9d0fd.js"></script>
+
+  <script src="/index.js" defer></script>
 </head>
 <body>
   <nav class="navbar navbar-default">
